***DDI, version 1.1.0 ***

- added DDI69 criterion
- built package for R 4.0.1

***DDI, version 1.0.0 ***

- first release for testing
- includes criteria DDI-1 to DDI-68
- available sum export for showing only how many DDI each patient met

***DDI, version 0.1.0 ***

- initial release on github
- includes criteria DDI-1, DDI-2-3, DDI-6, DDI-12, DDI-16, DDI-24