@@ -18,5 +18,5 @@ StripTrailingWhitespace: Yes
 BuildType: Package
 PackageUseDevtools: Yes
 PackageInstallArgs: --no-multiarch
-PackageCheckArgs: --no-manual
+PackageCheckArgs: --as-cran
 PackageRoxygenize: rd,collate,namespace,vignette
