@@ -7,7 +7,9 @@
 get_bool_exp <- function(criterion) {
 
     concomitant <- FALSE
-    bool1 <- bool2 <- NULL
+    bool1 <- bool2 <- NA
+    drugs_amount <- NA
+    daily_dosage_check <- NA
 
     switch(criterion,
            DDI1 = {
@@ -52,7 +54,7 @@ get_bool_exp <- function(criterion) {
            },
            DDI11 = {
                bool1 <- '^B01AA|^B01AE|^B01AF'
-               bool2 <- '^M01A|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI12 = {
                bool1 <- '^B01AA|^B01AE|^B01AF'
@@ -64,7 +66,7 @@ get_bool_exp <- function(criterion) {
            },
            DDI14 = {
                bool1 <- '^B01AA'
-               bool2 <- '^J01|J01RA09|J01RA10|J01RA11|J01RA12|J01RA13'
+               bool2 <- '^J01M|J01RA09|J01RA10|J01RA11|J01RA12|J01RA13'
            },
            DDI15 = {
                bool1 <- '^B01AA'
@@ -72,28 +74,29 @@ get_bool_exp <- function(criterion) {
            },
            DDI16 = {
                bool1 <- 'B01AE07'
-               bool2 <- 'C08DA01|C09BB10|C08DA51|C01BD01|C01BD07|C01BA01|C01BA51|C01BA71|C01EB18|J01FA01|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA10|J01RA07|J02AB02|J02AC02|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53|J05AP02|L01XE07|L04AD01|C03XA02'
+               bool2 <- 'J02AB02|J02AC02|C01BD07|C01BD01|L04AD01|C08DA01|C09BB10|C08DA51|C01BA01|C01BA51|C01BA71|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA01|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53'
            },
            DDI17 = {
                bool1 <- 'B01AF03'
-               bool2 <- 'C08DA01|C09BB10|C08DA51|C01BD01|C01BD07|C01BA01|C01BA51|C01BA71|C01EB18|J01FA01|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA10|J01RA07|J02AB02|J02AC02|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53|J05AP02|L01XE07|L04AD01|C03XA02'
+               bool2 <- 'J02AB02|J02AC02|C01BD07|C01BD01|L04AD01|C08DA01|C09BB10|C08DA51|C01BA01|C01BA51|C01BA71|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA01|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53'
            },
            DDI18 = {
                bool1 <- 'B01AF01'
-               bool2 <- 'C08DA01|C09BB10|C08DA51|C01BD01|C01BD07|C01BA01|C01BA51|C01BA71|C01EB18|J01FA01|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA10|J01RA07|J02AB02|J02AC02|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53|J05AP02|L01XE07|L04AD01|C03XA02|C08DB01|C08DA01|C09BB10|C08DA51|C01EB18|J01FA01|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA06|J01FA15|J02AB02|J02AC02|J02AC01|J01RA07|J02AC04|J02AC03|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53|J05AG02|J05AE02|J05AE04|J05AE01|J05AR15|V03AX03|J05AR14|J05AR22|J05AR18|J05AR09|J05AP02|J05AP03|A02BA01|A02BA51|L01XE07|L01XE01|L01XE11|A04AD12|N06AB08|N06AX06|C03XA02|C10AX12'
+               bool2 <- 'J02AB02|J02AC02|J02AC03|J02AC04|J02AC01|C08DB01|C01BD07|C01BD01|L04AD01|C08DA01|C09BB10|C08DA51|C01BA01|C01BA51|C01BA71|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA01|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53'
            },
            DDI19 = {
                bool1 <- 'B01AF02'
-               bool2 <- 'C08DA01|C09BB10|C08DA51|C01BD01|C01BD07|C01BA01|C01BA51|C01BA71|C01EB18|J01FA01|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA10|J01RA07|J02AB02|J02AC02|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53|J05AP02|L01XE07|L04AD01|C03XA02|C08DB01|C08DA01|C09BB10|C08DA51|C01EB18|J01FA01|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA06|J01FA15|J02AB02|J02AC02|J02AC01|J01RA07|J02AC04|J02AC03|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53|J05AG02|J05AE02|J05AE04|J05AE01|J05AR15|V03AX03|J05AR14|J05AR22|J05AR18|J05AR09|J05AP02|J05AP03|A02BA01|A02BA51|L01XE07|L01XE01|L01XE11|A04AD12|N06AB08|N06AX06|C03XA02|C10AX12'
+               bool2 <- 'J02AB02|J02AC02|J02AC03|J02AC04|C08DB01|C01BD07|C01BD01|L04AD01|C08DA01|C09BB10|C08DA51|C01BA01|C01BA51|C01BA71|J01FA09|A02BD06|A02BD07|A02BD09|A02BD05|A02BD04|A02BD11|J01FA01|J05AE03|J05AR23|J05AP52|J05AR10|J05AP53'
            },
            DDI20 = {
                bool1 <- '^B01AC|^N02BA|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02'
-               bool2 <- '^M01A|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI21 = {
-               bool1 <- 'C03DB01|C03DB02|C03DA04|C03DA01|^C03E|^C09|^M01A|^J01E|J04AM08|J01RA02'
+               bool1 <- 'C03DB01|C03DB02|C03DA04|C03DA01|^C03E|^C09|^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|^J01E|J04AM08|J01RA02'
                bool2 <- NA
                concomitant <- TRUE
+               drugs_amount <- 2
            },
            DDI22 = {
                bool1 <- '^C09|^C03D|^C03E'
@@ -101,15 +104,15 @@ get_bool_exp <- function(criterion) {
            },
            DDI23 = {
                bool1 <- '^C09'
-               bool2 <- '^M01A'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI24 = {
                bool1 <- '^C02|^C03|^C07|^C08|^C09|C10BX03|C10BX04|C10BX06|C10BX07|C10BX09|C10BX10|C10BX11|C10BX12|C10BX13|C10BX14|C10BX15'
-               bool2 <- '^M01A|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI25 = {
                bool1 <- '^C03|^C07B|^C07C|^C07D|^C08G|^C09BA|C09BX01|C09BX03|^C09DA|C09DX01|C09DX03|C09DX06|C09XA52|C09XA54|C10BX13'
-               bool2 <- '^M01A|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI26 = {
                bool1 <- '^C10AA|A10BH51|A10BH52|^C10BA|^C10BX'
@@ -159,6 +162,7 @@ get_bool_exp <- function(criterion) {
                bool1 <- '^N02A|^N03|^N05|^N06'
                bool2 <- NA
                concomitant <- TRUE
+               drugs_amount <- 3
            },
            DDI38 = {
                bool1 <- 'N05BA12|N05BA01|N05CD05|N05CF02|N05CF01'
@@ -174,10 +178,10 @@ get_bool_exp <- function(criterion) {
            },
            DDI41 = {
                bool1 <- '^N06AB|N06CA03'
-               bool2 <- '^N06AF|^N06AG|^N04BD|J01XX08|^N05AN|^N06AA|^N06AB|N06AX16|N06AX21|N06AX17|N06AX11|N06AX25|N06AX05|N06AX03|N06AX18|N06AX26|R05DA09|N07XX59|N01AH01|N02AB03|N01AH51|N02AB02|N02AG03|N02AB52|N02AB72|N02AX02|N02AJ14|N02AJ15|N02AJ13|N07BC02|N02AC52|N02AD01|^N02CC|A08AA10|A08AA02'
+               bool2 <- '^N06AF|^N06AG|^N04BD|J01XX08|^N05AN|^N06AA|N06AX16|N06AX21|N06AX17|N06AX11|N06AX25|N06AX05|N06AX03|N06AX18|N06AX26|R05DA09|N07XX59|N01AH01|N02AB03|N01AH51|N02AB02|N02AG03|N02AB52|N02AB72|N02AX02|N02AJ14|N02AJ15|N02AJ13|N07BC02|N02AC52|N02AD01|^N02CC|A08AA10|A08AA02'
            },
            DDI42 = {
-               bool1 <- '^M01A|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool1 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
                bool2 <- '^N06AB|N06CA03|N06AX16|N06AX21'
            },
            DDI43 = {
@@ -186,7 +190,7 @@ get_bool_exp <- function(criterion) {
            },
            DDI44 = {
                bool1 <- '^N05AN'
-               bool2 <- '^M01A|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI45 = {
                bool1 <- '^N05AN'
@@ -246,12 +250,14 @@ get_bool_exp <- function(criterion) {
            },
            DDI59 = {
                bool1 <- '^H02|^M01BA|^N02CB'
-               bool2 <- '^M01A|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
+               bool2 <- '^M01AA|^M01AB|^M01AC|^M01AE|^M01AG|^M01AH|M01AX01|^N02BA|B01AC06|B01AC56|A01AD05|M01BA03|C10BX08|C10BX12|C10BX06|C07FX04|N02AJ07|N02AJ02|C07FX03|N02AJ18|C10BX02|C10BX05|C10BX01|C10BX04|C07FX02|N02AJ08|N02AJ14|N02AJ19|L01XX33'
            },
            DDI60 = {
                bool1 <- 'A03BA01|A03CB03|A04AD01|N05CM05|A04AD51|A03BB03|A03CB01|^A03B|^A03CB|^A03DB|A06AB30|A03CA02|A03AA07|S01FA05|A03BA03|A03CB31|A03AB05|A03CA34|G04BD04|G04BD02|G04BD08|G04CA53|G04BD07|G04BD11|G04BD09|G04BD10|R06AX07|N04AA01|N04AC01|R06AB01|R06AB51|R06AA08|R06AB04|R06AB54|R06AA04|R06AA54|R06AX02|R06AB06|R06AB56|R06AB02|R06AB52|R06AA02|R06AA52|R06AA09|R06AA59|N05BB01|N05BB51|R06AE05|R06AE55|R06AD02|R06AD52|R06AC01|C01BA03|N06AA09|N06CA01|N06AA17|N06AA04|N06AA01|N06AA12|N06AA02|N06AA10|N06AA06|N06AB05|N05AA01|N05AB03|N05AB06|N05AC02|N05AH02|N05AH01|N05AH03|M03BX08|M03BC01|M03BC51'
                bool2 <- NA
                concomitant <- TRUE
+               drugs_amount <- 2
+               daily_dosage_check <- list( c('N06AA12'), c(6), c('mg'), c('greater') )
            },
            DDI61 = {
                bool1 <- 'L04AD01'
@@ -282,16 +288,13 @@ get_bool_exp <- function(criterion) {
                bool2 <- 'N06AB03|N06AC03|N06AB05|N06AB06|N06AX12|A08AA62'
            },
            DDI68 = {
-               bool1 <- 'S01EC01|^C03A|^C03B|^C03C|^C07B|^C07C|^C07D|^C08G|^C09BA|C09BX01|C09BX03|^C09DA|C09DX01|C09DX03|C09DX06|C09XA52|C09XA54|C10BX13|A01AB04|A07AA07|J02AA01|^H02|^M01BA|^N02CB|^J01G|^A06AB|A06AG02|A06AD18|A06AG07|B05CX02|V04CC01|^R03AA|^R03AC|R03DA04|R03DB04|R03DA54|R03DA74|N06BC01|V04CG01|^A10A'
+               bool1 <- 'S01EC01|^C03A|^C03B|^C03C|^C07B|^C07C|^C07D|^C08G|^C09BA|C09BX01|C09BX03|^C09DA |C09DX01|C09DX03|C09DX06|C09XA52|C09XA54|C10BX13|A01AB04|A07AA07|J02AA01|^H02|^M01BA|^N02CB|^J01G|^A06AB|A06AG02|A06AD18|A06AG07|B05CX02|V04CC01|^R03AA|^R03AC|R03DA04|R03DB04|R03DA54|R03DA74|N06BC01|V04CG01|^A10A'
                bool2 <- NA
                concomitant <- TRUE
-           },
-           DDI69 = {
-               bool1 <- '^N06AB|N06CA03'
-               bool2 <- '^C03A|^C03B|^C03C|^C03E|^C07B|^C07C|^C07D|^C08G|^C09BA|C09BX01|C09BX03|^C09DA|C09DX01|C09DX03|C09DX06|C09DX07|C09XA52|C09XA54|C10BX13'
+               drugs_amount <- 2
            }
 
     )
 
-    invisible(c(bool1, bool2, concomitant))
+    invisible(list(bool1, bool2, concomitant, drugs_amount, daily_dosage_check))
 }
