@@ -4,27 +4,20 @@
 \alias{eval_crit}
 \title{Evaluates the imported patients' data for the selected DDI criteria at once.}
 \usage{
-eval_crit(
-  selected = "all",
-  excel_path = NULL,
-  exclude = NULL,
-  excel_out = TRUE,
-  single_excel = TRUE,
-  export_data_path = NULL,
-  suppressNA = TRUE,
-  excel_sheet = 1,
-  excel_col_data = "med_gen__decod",
-  excel_col_pid = "usubjid",
-  show_only_meet = FALSE,
-  show_only_sum = FALSE
-)
+eval_crit(selected = "all", excel_path = NULL, exclude = NULL,
+  excel_out = TRUE, single_excel = TRUE, export_data_path = NULL,
+  suppressNA = TRUE, excel_sheet = 1,
+  excel_col_data = "med_gen__decod", excel_col_pid = "usubjid",
+  excel_col_daily_dosage = "daily_dosage",
+  excel_col_med_unit = "med_unit", show_only_meet = FALSE,
+  show_only_sum = FALSE)
 }
 \arguments{
-\item{selected}{(Character vector) (optional) (default: 'all') the selected criteria to export given in the form of c("DDI1, "DDI6"). Valid options 'all' and DDI1 to DDI69.}
+\item{selected}{(Character vector) (optional) (default: 'all') the selected criteria to export given in the form of c("DDI1, "DDI6"). Valid options 'all' and DDI1 to DDI68.}
 
 \item{excel_path}{(Character) (optional) (default: NULL) the path that the excel file can be read from. If NULL a file choose window will be displayed so that you can choose the excel file.}
 
-\item{exclude}{(Character) (optional) (default: NULL) a vector of criteria that you want to exclude. Example: c("DDI1, "DDI6"). Valid options DDI1 to DDI69.}
+\item{exclude}{(Character) (optional) (default: NULL) a vector of criteria that you want to exclude. Example: c("DDI1, "DDI6"). Valid options DDI1 to DDI68.}
 
 \item{excel_out}{(Boolean) (optional) (default: TRUE) output excel file with the evaluated data.}
 
@@ -39,6 +32,10 @@ eval_crit(
 \item{excel_col_data}{(Character) (optional) (default: 'med_gen__decod') the column name of the column that stores the ATC codes data in the provided excel file.}
 
 \item{excel_col_pid}{(Character) (optional) (default: 'usubjid') the column name that specifies the patient id in the excel you provided for the data.}
+
+\item{excel_col_daily_dosage}{(Character) (optional) (default: 'daily_dosage') the column name that specifies the daily dosage so that some DDI can take into account the dosage.}
+
+\item{excel_col_med_unit}{(Character) (optional) (default: med_unit) the column name that specifies the medicine unit (e.g. mg or g) that is used to calculate the daily dosage.}
 
 \item{show_only_meet}{(Boolean) (optional) (default: FALSE) set to TRUE if you want to have exported in the excel only the patients that meet the conditions for this criterion}
 
